# resumeapi

./: .docker-compose.yml  .dockerignore  .env.example  .flake8  .gitignore  .pep8speaks.yml  Dockerfile  Pipfile  README.md  auth_handler.py  entrypoint.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.py  setup.cfg
.github/workflows/: codeql-analysis.yml  shiftleft-analysis.yml
resumeapi/: __init__.py  __version__.py  controller.py  main.py  models.py  schema.py
tests/models/: test_models.py
