[project]
name = "resumeapi"
version = "0.1.0"
description = "Create an API that provides my resume"
authors = ["Eric Rochow <ericrochow@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
python = "^3.6"
homepage = ""
repository = ""
documentation = ""
keywords = []
classifiers = []

[dependencies]
bcrypt >= 3.2.0
email-validator >= 1.1.2
fastapi >= 0.63.0
peewee >= 3.14.2
PyJWT >= 2.0.1
python-decouple >= 3.4
python-dotenv >= 0.15.0
uvicorn [standard] >= 0.13.4

[dev-dependencies]
black >= 20.8b1
flake8-bandit >= 2.1.2
ipdb >= 0.13.6

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ["py36", "py37", "py38", "py39"]
include = "\.pyi?$"
exclude = """

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
"""

