[project]
name = "resumeapi"
version = "0.2.0"
description = "Create an API that provides my resume"
readme = "README.md"
requires-python = ">=3.6"
license = "Apache 2.0"
keywords = []
authors = [
  {name = "Eric Rochow"},
  {email = "ericrochow@gmail.com"}
]
maintainers = [
  {name = "Eric Rochow"},
  {email = "ericrochow@gmail.com"}
]
classifiers = []

dependencies = [
  "bcrypt >= 3.2.0",
  "email-validator >= 1.1.2",
  "fastapi >= 0.63.0",
  "peewee >= 3.14.2",
  "PyJWT >= 2.0.1",
  "python-decouple >= 3.4",
  "python-dotenv >= 0.15.0",
  "uvicorn[standard] >= 0.13.4",
]

[project.optional_dependencies]
dev = [
  "black >= 20.8b1",
  "flake8-bandit >= 2.1.2",
  "ipdb >= 0.13.6",
]

[project.urls]
homepage = ""
repository = ""
documentation = ""
changelog = ""

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ["py36", "py37", "py38", "py39"]
include = "\.pyi?$"
extend-exclude = '''
(
  /(
      \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''

