[metadata]
name = resumeapi
version = 0.2.0
url = https://github.com/ericrochow/resumeapi
# download_url
# project_urls
author = Eric Rochow
author_email = ericrochow@gmail.com
maintainer = Eric Rochow
maintainer_email = ericrochow@gmail.com
classifiers =
    Framework :: FastAPI
    Programming Language :: Python :: 3
license_file = LICENSE
description = API that provides my resume
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = resume

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    fastapi[all]>=0.85.0
    passlib[bcrypt]>=1.7.4
    psycopg-binary>=2.9.3
    pydantic[dotenv,email]>=1.10.2
    python-dotenv>=0.20.1
    python-jose>=3.3.0
    python-multipart>=0.0.5
    sqlmodel>=0.0.8
    uvicorn[standard]>=0.18.3

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = resumeapi.main:app

[options.extras_require]
dev = 
    bandit>=1.7.4
    black>=22.8.0
    flake8>=5.0.4
    install>=1.3.5
    ipdb>=0.13.9
    ipython>=8.5.0
    mccabe>=0.7.0
    mypy>=0.982
    pydocstyle[toml]>=6.1.1
    pylint>=2.15.3
    tox>=3.26.0

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*